initial startup of multiple hq-bpmsuite.  fail-over not yet quite working